--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2'
 services:
   jenkins:
     container_name: jenkins
-    image: registry.npd.learndirect.com/jenkins:master
+    image: bit1/jenkins
     build: .
     ports:
       - 8080:8080
@@ -11,11 +11,12 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
 # uncomment next line if you want to keep jenkins data (effectively, all of jenkins) when the container has been deleted
-#      - jenkins-data:/var/jenkins_home
+      - jenkins_data:/var/jenkins_home
     privileged: true
 
 
 
-
+volumes:
+  jenkins_data:
 
 
