--- a/derived-jenkins/docker-compose.yml
+++ b/derived-jenkins/docker-compose.yml
@@ -1,9 +1,8 @@
 version: '2'
 
 services:
-
-  derived-jenkins:
-    container_name: derived-jenkins
+  jenkins:
+    container_name: jenkins
     image: bit1/derived-jenkins
     build:
       context: .
@@ -12,3 +11,14 @@ services:
         - https_proxy
     ports:
       - 8080:8080
+      - 50000:50000
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+# uncomment next line if you want to keep jenkins data (effectively, all of jenkins) when the container has been deleted
+      - jenkins_data:/var/jenkins_home
+    privileged: true
+
+volumes:
+  jenkins_data:
+
+
